--- a/templates/download.html
+++ b/templates/download.html
@@ -26,7 +26,7 @@
         <input type="radio" name="language" value="tr">土耳其语-英语<br>
         <input type="text" name="language" size="5">自定义语种，输入语种简写，xx-en，例如土耳其语-英语，则输入tr即可<br>
         <br>
-        执行词嵌入迁移过程<br>
+        下载对应的维基百科语料，用于制作词表<br>
         <input type="submit" value="开始执行" /><br>
         <br>
     </form>
