--- a/templates/upload.html
+++ b/templates/upload.html
@@ -40,6 +40,10 @@
         另一语言：<input type="file" name="file_test_lang"  /><br>
         <input type="submit" value="提交" /><br>
         <br>
+        在训练语料上传完成之后，请选择此选项，进行词嵌入迁移。<br>
+        <input type="radio" name="transfer" value="transfer">词嵌入迁移<br>
+        <input type="submit" value="提交" /><br>
+
     </form>
   </div>
 </body>
